<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16dp"
    tools:context=".ui.sign_up.StepTwoFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_person"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:padding="@dimen/padding_8dp"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_person">

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="@dimen/padding_16dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/male" />

    </RadioGroup>

    <EditText
        android:id="@+id/input_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_64dp"
        android:background="@drawable/rounded_corner_input"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:focusable="false"
        android:hint="@string/department"
        android:padding="@dimen/padding_14dp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <EditText
        android:id="@+id/input_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16dp"
        android:background="@drawable/rounded_corner_input"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:focusable="false"
        android:hint="@string/grade"
        android:padding="@dimen/padding_14dp"
        app:layout_constraintTop_toBottomOf="@id/input_department" />

    <Button
        android:id="@+id/btn_next"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>